--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,16 @@
 
 
 body, html {
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 100%;
     min-height: 100%;
     width: 100%;
     margin: 0;
-    overflow-y: hide;
-    overflow-x: hide;
     background-image: linear-gradient( #fcff28 150px, rgb(255, 95, 122) 41%, rgb(7, 255, 7) 66%);
-    overflow-wrap: break-word;
-    word-wrap: break-word;
+    overflow-y: hidden;
+    overflow-x: hidden;
+
     }
 
     #heading {
@@ -109,7 +110,7 @@ body, html {
         margin-right: 20px;
         display: grid;
         grid-template-columns: 1fr;
-        height: calc(100% - 100px);
+        height: calc(100vh - 100px);
         overflow-y: hide;
         overflow-x: hide;
         }
