--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,10 @@ body, html {
                             display: block;}
                         
         @media only screen and (max-width: 600px) {
-
+        #body, html {
+                overflow-y: scroll;
+                overflow-x: scroll;
+            
 
         #heading {
             background-image: url('header.jpg');
