--- a/pages/pageStyle.css
+++ b/pages/pageStyle.css
@@ -30,7 +30,7 @@ background-color: transparent;
 background-image: linear-gradient(#fcff28 0%, white 250px);
 }
 
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
     #parent {
     display: block;
     width: 100vw;
