--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ body, html {
             background-image: url('header.jpg');
             margin: 0;
             width: 100%;
+            display: block;
         }
 
         #parent {
@@ -67,6 +68,8 @@ body, html {
         overflow-x: hide;
         }
 
+        
+        
     }
 
                 #ul {
