--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body, html {
     margin: 0;
     background-image: linear-gradient( #fcff28 150px, rgb(255, 95, 122) 41%, rgb(7, 255, 7) 66%);
     overflow-y: hidden;
-    overflow-x: hidden;
+    overflow-x: visible;
 
     }
 
